--- a/action.yml
+++ b/action.yml
@@ -2,17 +2,8 @@ name: Rails test
 description: Run Rails lints & tests
 runs:
   using: docker
-  image: docker://voormedia/ruby-build:3.16
-
-  env:
-    RAILS_ENV: test
-    DISABLE_SPRING: 1
-    BUNDLE_SILENCE_ROOT_WARNING: 1
-
-  # eval $(ssh-agent) &&
-  # ssh-add - <<< '${{ secrets.PRIVATE_SSH_KEY }}' &&
-  # entrypoint: "/bin/sh -c"
-  args:
-    - bundle install
-    - bundle exec rails db:create db:structure:load
-    - bundle exec rails test
+  image: Dockerfile
+  args: |
+    bundle install
+    bundle exec rails db:create db:structure:load
+    bundle exec rails test
