--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,8 @@ description: Run Rails lints & tests
 runs:
   using: docker
   image: Dockerfile
-  args: - |
-    bundle install
-    bundle exec rails db:create db:structure:load
-    bundle exec rails test
+  args:
+    - |
+      bundle install
+      bundle exec rails db:create db:structure:load
+      bundle exec rails test
