--- a/action.yml
+++ b/action.yml
@@ -6,9 +6,7 @@ runs:
   args:
     - |
       ssh-keyscan -H github.com > /etc/ssh/ssh_known_hosts
-      eval $(ssh-agent)
-      echo '${{ secrets.SSH_PRIVATE_KEY }}' | ssh-add -
-
+      git config --global url."https://${GITHUB_TOKEN}@github.com/".insteadOf "git@github.com:"
       bundle install
       bundle exec rails db:create db:structure:load
       bundle exec rails test
