--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,8 @@ runs:
     - |
       ssh-keyscan -H github.com > /etc/ssh/ssh_known_hosts
       git config --global url."https://oauth2:${GITHUB_TOKEN}@github.com/".insteadOf "git@github.com:"
+      echo "hi"
+      echo ${GITHUB_TOKEN}
       bundle install
       bundle exec rails db:create db:structure:load
       bundle exec rails test
