--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,10 @@ input:
 runs:
   using: docker
   image: Dockerfile
+  env:
+    RAILS_ENV: test
+    DISABLE_SPRING: 1
+
   # GH_CLONE_TOKEN must be set in Organisation Secrets for GH Actions.
   args:
     - ssh-keyscan -H github.com > /etc/ssh/ssh_known_hosts
