--- a/action.yml
+++ b/action.yml
@@ -5,14 +5,11 @@ inputs:
   token:
     description: A Github personal access token (PAT)
     required: false
-  version:
-    description: Alpine OS version
-    required: false
-    default: 3.15
+    default: ""
 
 runs:
   using: docker
-  image: docker://voormedia/ruby-build:${{ inputs.version }}
+  image: docker://voormedia/ruby-build:3.15
   env:
     RAILS_ENV: test
     DISABLE_SPRING: 1
