--- a/action.yml
+++ b/action.yml
@@ -1,15 +1,21 @@
 name: Rails test
-description: Run Rails lints & tests
+description: Run Rails tests
 
 inputs:
   token:
-    description: A Github personal access token (PAT)
+    description: Github personal access token (PAT) to clone other private repos
     required: false
-    default: ""
+
+  command:
+    description: Command to run tests
+    required: false
+    default: rails test
 
 runs:
   using: docker
+  # https://pkgs.alpinelinux.org/packages?name=ruby&branch=v3.14&arch=x86_64
   image: docker://voormedia/ruby-build:3.14
+
   env:
     RAILS_ENV: test
     DISABLE_SPRING: 1
@@ -20,4 +26,4 @@ runs:
     - bundle config --global silence_root_warning true
     - bundle install
     - bundle exec rails db:create db:structure:load
-    - bundle exec rails test
+    - bundle exec ${{ inputs.command }}
