--- a/action.yml
+++ b/action.yml
@@ -26,7 +26,7 @@ runs:
 
     # Install dependencies.
     - bundle config --global silence_root_warning true
-    - bundle install
+    - bundle install --jobs 8 --retry 3
 
     # Run rubocop if configured.
     # TODO: Extract into separate action? If so, make sure we need to run bundle only once!
