Allow custom command to be more flexible.

--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,7 @@ inputs:
   command:
     description: Command to run tests
     required: false
-    default: rails test
+    default: bundle exec rails test
 
 runs:
   using: docker
@@ -27,4 +27,4 @@ runs:
     - bundle install
     - bundle exec rails db:create
     - if [ -f "db/structure.sql" ]; then bundle exec rails db:structure:load; else bundle exec rails db:schema:load; fi
-    - bundle exec ${{ inputs.command }}
+    - ${{ inputs.command }}
