--- a/action.yml
+++ b/action.yml
@@ -28,3 +28,13 @@ runs:
     - bundle exec rails db:create
     - if [ -f "db/structure.sql" ]; then bundle exec rails db:structure:load; else bundle exec rails db:schema:load; fi
     - ${{ inputs.command }}
+
+  # Add cache step
+  steps:
+    - name: Cache bundle and assets
+      uses: actions/cache@v3
+      with:
+        path: vendor/bundle
+        key: ${{ runner.os }}-rails-${{ hashFiles('**/Gemfile.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-rails-
