--- a/action.yml
+++ b/action.yml
@@ -28,7 +28,8 @@ runs:
     - ssh-keyscan -H github.com > /etc/ssh/ssh_known_hosts
     - git config --global url."https://oauth2:${{ inputs.token }}@github.com/".insteadOf "git@github.com:"
     - bundle config --global silence_root_warning true
-    - bundle install
+    - bundle config set path 'vendor/bundle'
+    - bundle install --jobs 4 --retry 3
     - bundle exec rails db:create
     - if [ -f "db/structure.sql" ]; then bundle exec rails db:structure:load; else bundle exec rails db:schema:load; fi
     - ${{ inputs.command }}
