structure:load doesn't exist in newer Rails versions anymore, schema:load works for both variants now.

--- a/action.yml
+++ b/action.yml
@@ -26,5 +26,5 @@ runs:
     - bundle config --global silence_root_warning true
     - bundle install
     - bundle exec rails db:create
-    - if [ -f "db/structure.sql" ]; then bundle exec rails db:structure:load; else bundle exec rails db:schema:load; fi
+    - bundle exec rails db:schema:load
     - ${{ inputs.command }}
