--- a/action.yml
+++ b/action.yml
@@ -30,7 +30,7 @@ runs:
     - ${{ inputs.setup }}
 
     - ssh-keyscan -H github.com > /etc/ssh/ssh_known_hosts
-    - git config --global url."https://${{ inputs.token }}@github.com/".insteadOf "git@github.com:"
+    - git config --global url."https://x-access-token:${{ inputs.token }}@github.com/".insteadOf "git@github.com:"
 
     # Install dependencies.
     - bundle config --global silence_root_warning true
